# monitorch-experiments

./: LICENSE  README.md  goodseed_visualizer.py  notes4matej.md  pyproject.toml
benchmark/: benchmark_exploration.ipynb  benchmark_exploration_random_data.ipynb  benchmark_utils.py  run_cpu_tests.py  script.py
benchmark/results/: 251112.csv  checkpoint_31.csv  exhaustive_cpu.csv  exhaustive_gpu.csv  exhaustive_gpu_11_14.csv  final.csv  final_imagenet.csv
experiments/adamw_basic_showcase/logs/: adam_lr3e-2_wd0.05_moments-default.pkl  adam_lr3e-4_wd0.05_moments-default.pkl  adam_lr3e-4_wd0.05_moments0.pkl
experiments/test/: kernel-metadata.json  test.py
