[project]
name = "monitorch-experiments"
version = "0.0.0.1"
readme = "README.md"
authors = [
  { name = "Maksym Khavil", email = "mk.khavil@gmail.com" }
]
keywords = [
        "pytorch",
        "visualization",
        "neural networks",
        "gradients"
]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
requires-python = ">=3.11"

dependencies = [
  "torch>=2.0.0",
  "monitorch",
  "jupyter>=1.1.1",
  "python-dotenv[cli] ~= 1.2.2",
  "kaggle >= 1.8.0",
]

[tool.ruff]
ignore = ["E402"]
